Replaces calls to deprecated methods